# image_viewer_opencv

./: Cargo.toml  Dioxus.toml  README.md
assets/: tailwind.css
src/: main.rs  opencv_img_upload.rs  rfd_img_upload.rs
