[package]
name = "image_viewer_opencv"
version = "0.1.0"
authors = ["nitinn@valueaddsofttech.com <nitinn@valueaddsofttech.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
anyhow = "1.0.98"
base64 = "0.22.1"
opencv = "0.94.4"
rfd = "0.15.3"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
